--- a/public/partials/gs_header.html
+++ b/public/partials/gs_header.html
@@ -1,15 +1,14 @@
 <div class="row">
     <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
     <div class="top-info col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
-        <span class="top-description col-lg-6 col-md-6 col-sm-6 col-xs-12">Taniguchi General service limited company is a company specializing in real state.</span>
+        <span class="top-description col-lg-6 col-md-6 col-sm-6 col-xs-12">有限会社谷口総合サービスは、不動産を専門とする会社です。</span>
         <div class="right-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
-
 
             <div class="info-container">
                 <img src="../R/topsection/ic_location.png" alt="call" />
                 <div class="divider"></div>
-                <p class="right-text">2 - 3, 5 Honcho, Takikawa-shi, Hokkaido
-                    <br>073-0021 TS Building 1F</p>
+                <p class="right-text">北海道滝川市本町2丁目3番5号
+                    <br>073-0021 TSビル 1F</p>
             </div>
 
             <div class="info-container">
@@ -37,26 +36,28 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Logo here</a>
+                    <a class="navbar-brand" href="#">
+                        <img src="../R/logos/logo-blue.png">
+                    </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
 
                     <ul class="nav navbar-nav navbar-right">
                         <li class="menu-item">
-                            <a style="background: transparent;" href="#!/generalservice/home">TOP PAGE</a>
+                            <a style="background: transparent;" href="#!/generalservice/home">トップページ</a>
                         </li>
                         <li class="menu-item">
-                            <a style="background: transparent;" href="#!/generalservice/owners">COMPANY PROFILE</a>
+                            <a style="background: transparent;" href="#!/generalservice/owners">会社概要</a>
                         </li>
                         <li class="menu-item">
-                            <a style="background: transparent;" href="#!/generalservice/contact">CONTACT US
+                            <a style="background: transparent;" href="#!/generalservice/contact">お問い合わせ
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="menu-item hidden-xs access-item">
                             <a href="#!/login">
                                 <img class="access-btn" src="../R/gsheader/access-button.png" alt="Access" />
-                                <div class="btn-txt">ACCESS</div>
+                                <div class="btn-txt">アクセス</div>
                             </a>
                         </li>
                     </ul>
