--- a/public/partials/gs_home.html
+++ b/public/partials/gs_home.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_header_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_menu_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_footer_styles.css" />
+    <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
+    
     <!-- bxSlider CSS file -->
     <link href="../plugins/facebooklikeslider/css/jquery.bxslider.css" rel="stylesheet" />
 
@@ -46,23 +48,23 @@
                     </div>
                     <div class="inner">
                         <div class="text">
-                            <h3>CUSTOMER WHO WANT TO SELL PROPERTIES</h3>
-                            <p>We will mediate property sales mainly in Takikawa city. Please inquiry in detail. </p>
+                            <h3>物件を売りたいお客様</h3>
+                            <p>滝川市内を中心に、物件売買の仲介を致します。 </p>
                         </div>
                         <div class="btn-container">
-                            <p>CLICK HERE</p>
+                            <p>CLICK</p>
                         </div>
                     </div>
                 </div>
                 <div id="to-buy">
                     <div class="inner">
                         <div class="btn-container">
-                            <p>CLICK HERE</p>
+                            <p>CLICK</p>
                         </div>
 
                         <div class="text">
-                            <h3>CUSTOMER WHO WANT TO BUY PROPERTY</h3>
-                            <p>We will mediate property sales mainly in Takikawa city. Please inquiry in detail. </p>
+                            <h3>物件を買いたいお客様</h3>
+                            <p>滝川市内を中心に物件売買の仲介を致します。 </p>
                         </div>
 
                     </div>
@@ -77,7 +79,7 @@
             <div class="wrapper col-lg-10 col-md-10 col-sm-10 col-xs-12">
                 <div class="left col-lg-6 col-md-6 col-sm-6 col-xs-12">
                     <h2>
-                        TANIGUCHI GS IS'
+                        谷口総合サービスとは・・・
                         <div id="custom-border"></div>
                     </h2>
                     <p class="darker">It is a long established fact that a reader will be distracted by the readable content of a page when
@@ -98,14 +100,17 @@
                     </p>
                 </div>
                 <div class="right col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="column-1">
-                        <img src="../R/gs_home/Apartment1.png" alt="">
-                        <img src="../R/gs_home/apartment_2.png" alt="">
+                    <div class="row">
+                            <div class="column-1 col-lg-6 col-md-6 col-sm-6 col-xs-6" >
+                                    <img class="h-img" src="../R/gs_home/Apartment1.png" alt="">
+                                    <img class="h-img" src="../R/gs_home/apartment_2.png" alt="">
+                                </div>
+                                <div class="column-2 col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                                    <img class="h-img" src="../R/gs_home/apartment_1.png" alt="">
+                                    <img class="h-img" src="../R/gs_home/apartment_blossom.jpg" alt="">
+                                </div>
                     </div>
-                    <div class="column-2">
-                        <img src="../R/gs_home/apartment_1.png" alt="">
-                        <img src="../R/gs_home/apartment_blossom.jpg" alt="">
-                    </div>
+                 
                 </div>
             </div>
             <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
