--- a/public/partials/maintaniguchi.html
+++ b/public/partials/maintaniguchi.html
@@ -1,100 +1,104 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Metal Plate home.</title>
+
+<head>
+    <title>Metal Plate home.</title>
 
 
-        <link rel="stylesheet" href="../CSS/main_taniguchi_styles.css" type="text/css"/>
-        
-        <!-- bxSlider CSS file -->
-        <link href="../plugins/facebooklikeslider/css/jquery.bxslider.css" rel="stylesheet" />
-    </head>
+    <link rel="stylesheet" href="../CSS/main_taniguchi_styles.css" type="text/css" />
 
-    <body>
-        <div class="header">
-            <div class="main-title">
-                <img alt="logo" src="../R/logos/Logo Taniguchi.png" />    
-            
+    <!-- bxSlider CSS file -->
+    <link href="../plugins/facebooklikeslider/css/jquery.bxslider.css" rel="stylesheet" />
+</head>
+
+<body>
+    <div class="header">
+        <div class="main-title">
+            <img alt="logo" src="../R/logos/Logo Taniguchi.png" />
+
+        </div>
+
+    </div>
+
+    <div class="row">
+        <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" style="padding:0px;">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="thumbnail">
+                    <div class="logo-container">
+                        <a href="#!/metalplatehome">
+                            <img src="../R/logos/1logo.png" alt="...">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="thumbnail">
+                    <div class="logo-container">
+                        <a href="#!/generalservice/home">
+                            <img src="../R/logos/2logo.png" alt="...">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="thumbnail">
+                    <div class="logo-container">
+                        <img src="../R/logos/3logo.png" alt="...">
+                    </div>
+                </div>
             </div>
 
         </div>
 
-        <div class="row">
-            <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" style="padding:0px;">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                        <div class="thumbnail">
-                            <div class="logo-container">
-                                <a href="#!/metalplatehome">
-                                    <img src="../R/logos/1logo.png" alt="...">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-        
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                        <div class="thumbnail">
-                            <div class="logo-container">
-                                <a href="#!/generalservice/home">
-                                    <img src="../R/logos/2logo.png" alt="...">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-        
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                        <div class="thumbnail">
-                            <div class="logo-container">
-                                    <img src="../R/logos/3logo.png" alt="...">
-                            </div>
-                        </div>
-                    </div>
+        <span class="col-lg-1 col-md-1 sm-1 hidden-xs"></span>
 
+    </div>
+
+
+    <div class="row slider">
+
+        <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"> </span>
+
+        <div class="slider-container col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+            <div class="thumbnail">
+                <div class="bxslider">
+                    <div>
+                        <img src="../R/main-slider/tsbuilding_crop.png" title="Funky roots">
+                    </div>
+                    <div>
+                        <img src="../R/main-slider/factory_Crop.png" title="The long and winding road">
+                    </div>
+                    <div>
+                        <img src="../R/main-slider/large_roof.png" title="Happy trees">
+                    </div>
+                </div>
             </div>
-
-            <span class="col-lg-1 col-md-1 sm-1 hidden-xs"></span>
-
         </div>
 
+        <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"> </span>
 
-        <div class="row slider">
+    </div>
 
-            <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"> </span>
-
-            <div class="slider-container col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
-
-                    <div class="thumbnail">
-                            <div class="bxslider">
-                                    <div><img src="/assets/images/coffee1.jpg" title="Funky roots"></div>
-                                    <div><img src="/assets/images/coffee2.jpg" title="The long and winding road"></div>
-                                    <div><img src="/assets/images/coffee3.jpg" title="Happy trees"></div>
-                            </div>
-
-                    </div>
-                    
-
-            </div>
-
-            <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"> </span>
-            
+    <footer class="footer navbar navbar-default ">
+        <div class="container">
+            <p class="footer-block">COPYRIGHT © 2018. ALL RIGHTS RESERVED. CREATED BY <span class="owl">OWLINVENTION</span> && <span class="blitz">BLITZAR CORP.</span></p>
         </div>
 
-        <footer class="footer navbar navbar-default ">
-                <div class="container">
-                        <p class="footer-block">Place sticky footer content here.</p>
-                      </div>
+    </footer>
 
-        </footer>
-
-        <script>
-            $(function(){
+    <script>
+        $(function () {
             $('.bxslider').bxSlider({
                 mode: 'fade',
             });
-            });
-        </script>
-        <!-- bxSlider Javascript file -->
-        <script src="../plugins/facebooklikeslider/js/jquery.bxslider.js"></script>
-    </body>
+        });
+    </script>
+    <!-- bxSlider Javascript file -->
+    <script src="../plugins/facebooklikeslider/js/jquery.bxslider.js"></script>
+</body>
+
 </html>
