--- a/public/CSS/business_styles.css
+++ b/public/CSS/business_styles.css
@@ -47,6 +47,7 @@ body{
 .service{
     display: inline-flex;
     margin-top: 50px;
+    padding: 0;
 }
 
 .service .left{
@@ -55,6 +56,7 @@ body{
 
 .service .right{
     display: inline-flex;
+    padding: 0;
 }
 
 .service .bullet-point-container .bulletpoint{
@@ -72,14 +74,13 @@ body{
 }
 
 .service .service-title{
-    color: #0052A4;
-    font-size: 26px;
-    font-family: mangaFont;
-    font-weight: bold;
+    color: rgb(34, 121, 207);
+    font-size: 2.8rem;
+    font-family: mpluslight;
 }
 
 .service .service-body{
-    font-family: mangaFont;
+    font-family: mplusregular;
     margin-top: 10px;
 }
 
@@ -95,4 +96,24 @@ body{
 }
 
 #thumbnail-slider ul li {
+}
+
+@media screen and (max-width: 770px) {
+    .service .service-title{
+        font-size: 3rem;
+        font-family: mplusregular;
+    }
+
+    .service .service-body{
+        font-family: mpluslight;
+    }
+
+    .right .even {
+        margin-top: 20px;
+    }
+
+    .odd{
+        margin-top: 25px;
+    }
+
 }
