--- a/public/CSS/company_styles.css
+++ b/public/CSS/company_styles.css
@@ -20,7 +20,7 @@ body{
 }
 
 .title-page h3{
-    font-family: mangaFont;
+    font-family: firalight;
     color: #FEFFFD;
     transform: skew(30deg);
     margin: 0;
@@ -54,6 +54,7 @@ body{
     display: inline-flex;
     padding: 0px;
     border: 1px solid #0052A4;
+    margin-top: 40px;
 }
 
 .info-row .icon .icon-inside{
@@ -64,11 +65,11 @@ body{
 
 .info-row .description{
     width: 40%;
-    margin-top: 17px;
+    margin-top: 12px;
     padding: 0px;
     color: #0052A4;
     font-weight: bold;
-    font-family: mangaFont;
+    font-family: mpluslight;
 }
 
 .info-row .info-content{
@@ -76,8 +77,9 @@ body{
     width: 60%;
     margin: auto;
     padding: 10px;
-    font-family: mangaFont;
+    font-family: mplusthin;
 }
+
 
 .address-container{
     margin-top: 60px;
@@ -87,40 +89,56 @@ body{
 }
 
 .address-container .row .thumbnail{
-    padding: 2px;
+    padding: 0;
     color: #FFF;
     border-color: transparent;
+    margin-top: 20px;
 }
 
-.address-container .row .thumbnail img{
-    width: 100%;
+
+
+.address-container .row .thumbnail .t-hdr{
+    background: url('../R/address-box-header.png');
+    height: 69px;
+    display: flex;
+    align-items: center;
+    padding: 8px 20px;
+    background-size: cover;
 }
 
-.address-container .row .thumbnail > table{
-    margin-left: 15px;
-    position: absolute;
-    top: 15%;
+.t-hdr .txt{
+    text-align: start;
+    font-family: mpluslight;
 }
 
-.address-container .row .thumbnail > table tr td{
-    font-size: 32px;
-    font-family: M+ Type-1 Light;
+.caption .row-itm{
+    padding: 0;
+    font-family: mplusthin;
+    font-size: 2.0rem;
 }
 
+.caption .row-itm.num{
+    font-family: firaregular;
+}
+
+.caption .row-itm.ic{
+    text-align: center;
+}
 
 .address-container .row .caption{
     padding: 12px;
-    padding-left: 40px;
     margin-top: 0px;
     background-color: #343434;
     color: #FFF;
     border: 0px;
     border-radius: 0px;
+    height: 200px;
 }
 
 .address-container .row .caption img{
-    width: 60%;
+    max-width: 100%;
     height: auto;
+    padding: 0;
 }
 
 .address-container .row .caption > table tr{
@@ -146,4 +164,9 @@ body{
         padding-bottom: 10px;
         margin-top: 10px;
     }
+
+    .address-container .row .caption{
+        height: 75px;
+    }
+    
 }
