--- a/public/CSS/generalServiceStyles/gs_contact_form.css
+++ b/public/CSS/generalServiceStyles/gs_contact_form.css
@@ -4,9 +4,9 @@
 }
 
 .form-title{
-    font-size: 34px;
-    font-weight: bold;
+    font-size: 30px;
     padding: 5px 0px;
+    font-family: mplusheavy;
 }
 
 .contact-form .gs-contact-form{
