--- a/public/partials/gs_footer.html
+++ b/public/partials/gs_footer.html
@@ -1,75 +1,67 @@
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+<link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
 
-	<link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+<!-- lets build our row wrapper -->
+<div class="row footer-row">
+	<span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+	<div class="footer-container col-lg-10 col-md-10 col-sm-10">
+		<footer class="footer-distributed">
 
-		<!-- lets build our row wrapper -->
-		<div class="row footer-row">
-			<span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-				<div class="footer-container col-lg-10 col-md-10 col-sm-10">
-						<footer class="footer-distributed">
+			<div class="footer-left">
 
-								<div class="footer-left">
-					
-									<!-- <h3>Company<span>logo</span></h3> -->
-					
-									<img style="max-width: 100%; height:50px" src="../R/footer/group_logo_footer.png" />
-					
-									<p class="footer-links">
-										<a href="#">Home</a>
-										·
-										<a href="#">Blog</a>
-										·
-										<a href="#">Pricing</a>
-										·
-										<a href="#">About</a>
-										·
-										<a href="#">Faq</a>
-										·
-										<a href="#">Contact</a>
-									</p>
-					
-									<p class="footer-company-name">Company Name &copy; 2015</p>
-								</div>
-					
-								<div class="footer-center">
-					
-									<div>
-										<i class="fa fa-map-marker"></i>
-										<p><span>21 Revolution Street</span> Paris, France</p>
-									</div>
-					
-									<div>
-										<i class="fa fa-phone"></i>
-										<p>+1 555 123456</p>
-									</div>
-					
-									<div>
-										<i class="fa fa-envelope"></i>
-										<p><a href="mailto:support@company.com">support@company.com</a></p>
-									</div>
-					
-								</div>
-					
-								<div class="footer-right">
-					
-									<p class="footer-company-about">
-										<span>About the company</span>
-										Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
-									</p>
-					
-									<div class="footer-icons">
-					
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
-										<a href="#"><i class="fa fa-github"></i></a>
-					
-									</div>
-					
-								</div>
-					
-							</footer>
+				<!-- <h3>Company<span>logo</span></h3> -->
+
+				<img style="max-width: 100%; height:50px" src="../R/footer/group_logo_footer.png" />
+
+				<p class="footer-links">
+					<a href="#">トップページ</a>
+					·
+					<a href="#">ニュース</a>
+					·
+					<a href="#">お問い合わせ</a>
+				</p>
+
+				<p class="footer-company-name">谷口総合サービス &copy; 2015</p>
+			</div>
+
+			<div class="footer-center">
+
+				<div>
+					<i class="fa fa-map-marker"></i>
+					<p>073-0021<br><span>北海道滝川市本町2丁目3番5号<br>ＴＳビル　1階</span></p>
 				</div>
-			<span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-		</div>
+
+				<div>
+					<i class="fa fa-phone"></i>
+					<p>0125-23-8170</p>
+				</div>
+
+				<div>
+					<i class="fa fa-envelope"></i>
+					<p>
+						<a href="mailto:support@company.com">0125-23-2250</a>
+					</p>
+				</div>
+
+			</div>
+
+			<div class="footer-right">
+
+				<p class="footer-company-about">
+					<span>宅地建物取引業者</span>
+					北海道知事　空知(3)　第474号
+				</p>
+
+				<div class="footer-icons">
+					<a href="#">
+						<i class="fa fa-facebook"></i>
+					</a>
+				</div>
+
+			</div>
+
+		</footer>
+	</div>
+	<span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+</div>
