--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -55,39 +55,37 @@
         <div class="options-section">
 
             <div class="row" style="max-width: 100%; margin: 0;">
-                <span class="col-lg-1 col-md-1 col-sm-2 hidden-xs" style="padding: 0; margin: 0"></span>
-                <div class="col-lg-10 col-md-10 col-sm-8 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" style="padding: 0px; ">
+                <div class="col-lg-10 col-md-10 col-sm-8 col-xs-10 col-xs-offset-1 col-sm-offset-2 col-md-offset-1 col-lg-offset-1" style="padding: 0px; ">
 
-                    <div class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-12">
-                        <div class="box-icon" id="box-1">
-                            <img class="img-icon" src="../R/services_black.png">
+                    <div class="row internal-serv-row">
+                        <div class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full">
+                            <div class="box-icon" id="box-1">
+                                <img class="img-icon" src="../R/services_black.png">
+                            </div>
+                            <div class="caption" id="cap-1">
+                                <h3>事業内容</h3>
+                            </div>
                         </div>
-                        <div class="caption" id="cap-1" >
-                            <h3>事業内容</h3>
-                            <p>...</p>
+
+                        <div class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full col-lg-offset-3-cuarters col-md-offset-3-cuarters col-sm-offset-3-cuarters">
+                            <div class="box-icon" id="box-2">
+                                <img class="img-icon" src="../R/icons/company_icon_unactive.png">
+                            </div>
+                            <div class="caption" id="cap-2">
+                                <h3>会社概要</h3>
+                            </div>
+                        </div>
+                        <div class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-full col-lg-offset-3-cuarters col-md-offset-3-cuarters col-sm-offset-3-cuarters">
+                            <div class="box-icon" id="box-3">
+                                <img class="img-icon" src="../R/icons/contact_icon_unactive.png">
+                            </div>
+                            <div class="caption" id="cap-3">
+                                <h3>お問い合わせ</h3>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-12 col-lg-offset-3-cuarters">
-                        <div class="box-icon" id="box-2">
-                            <img class="img-icon" src="../R/icons/company_icon_unactive.png">
-                        </div>
-                        <div class="caption" id="cap-2">
-                            <h3>会社概要</h3>
-                            <p>...</p>
-                        </div>
-                    </div>
-                    <div class="thumbnail col-lg-3-and-half col-md-3-and-half col-sm-3-and-half col-xs-12 col-lg-offset-3-cuarters">
-                        <div class="box-icon" id="box-3">
-                            <img class="img-icon" src="../R/icons/contact_icon_unactive.png">
-                        </div>
-                        <div class="caption" id="cap-3">
-                            <h3>お問い合わせ</h3>
-                            <p>...</p>
-                        </div>
-                    </div>
                 </div>
-                <span class="col-lg-1 col-md-1 col-sm-2 hidden-xs" style="padding: 0; margin: 0"></span>
             </div>
         </div>
 
@@ -97,7 +95,7 @@
                 <h1>
                     <span class="section-title-bold">谷口板金</span>
                     <div class="section-title">
-                        <div class="title">とは…</div> 
+                        <div class="title">とは…</div>
                         <div class="deco-container">
                             <div class="ball"></div>
                             <div class="line"></div>
@@ -111,9 +109,8 @@
             <p class="about-text">住宅から工場やビル・神社仏閣などの大規模施設まで、あらゆる建築物に対応し工事いたします。
                 <br>長年の実績と豊富な経験で培った技術、そして最新鋭の設備でお客様のあらゆるニーズにお応えします。</p>
 
-            <div class="row" style="padding: 0px; margin: 0px; padding-top: 10px;">
-                <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
-                <div class="col-lg-10 col-xs-12 col-sm-8 col-md-8" style="padding: 0px; margin: 0px; ">
+            <div class="row" style="padding: 0px; padding-top: 10px;">
+                <div class="col-lg-10 col-md-10 col-xs-12 col-sm-10 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-0" style="padding: 0px;">
                     <div class="col-xs-12 col-md-6 col-lg-6 col-sm-6" style="padding-right: 0px; padding-left: 0px;">
 
                         <div class="about-content">
@@ -149,7 +146,6 @@
 
                     </div>
                 </div>
-                <span class="col-lg-1 hidden-xs col-md-2 col-sm-2"></span>
             </div>
 
         </div>
@@ -159,8 +155,8 @@
                 <h1>
                     <span class="section-title-bold">谷口板金</span>
                     <span class="section-title">
-                        
-                        <div class="title">NEWS</div> 
+
+                        <div class="title">NEWS</div>
                         <div class="deco-container">
                             <div class="ball"></div>
                             <div class="line"></div>
@@ -243,51 +239,55 @@
         <div class="bottom-box">
 
             <div class="row" style="padding: 0px; margin: 0px">
-                <span class="col-lg-2 hidden-xs col-md-2 col-sm-2"></span>
-                <div class="col-lg-8 col-xs-12 col-sm-8 col-md-8" style="padding: 0px; margin: 0px; ">
+                <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12 col-lg-offset-1 
+                col-md-offset-1 col-sm-offset-1 col-xs-offset-0" 
+                style="padding: 0px;">
 
-                    <div class="col-lg-5 col-md-5 col-sm-8 col-xs-12" style="padding-right: 0px; padding-left: 0px;">
-                        <div class="contact-box">
-                            <h3 class="contact-title">お問い合わせ</h3>
-
-                            <form class="contact-form">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="content" placeholder="お問い合わせ内容＊">
+                    <div class="row">
+                            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-10
+                            col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-1" 
+                            style="padding-right: 0px; padding-left: 0px;">
+                                <div class="contact-box">
+                                    <h3 class="contact-title">お問い合わせ</h3>
+        
+                                    <form class="contact-form">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="content" placeholder="お問い合わせ内容＊">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="nameKanji" placeholder="お名前（漢字）＊">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="namekatakana" placeholder="お名前（カタカナ）＊">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" name="email" placeholder="E-mail＊">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="email" class="form-control" id="tel" placeholder="電話番号＊">
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" id="fax" placeholder="FAX番号">
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">送信</button>
+                                    </form>
+        
                                 </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="nameKanji" placeholder="お名前（漢字）＊">
+        
+                            </div>
+                            <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12" 
+                            style="padding-right: 0px; padding-left: 0px;">
+                                <div class="map-container">
+        
+                                    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d722.8132867177167!2d141.90654682920848!3d43.5596079705375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0c98d88d92de73%3A0x6893b993c8972458!2zSmFwYW4sIOOAkjA3My0wMDIxIEhva2thaWTFjSwgVGFraWthd2Etc2hpLCBIb25tYWNoaSwgMiBDaG9tZeKIkjPiiJI1LCDvvLTvvLPjg5Pjg6s!5e0!3m2!1sen!2sus!4v1512529915990"
+                                        frameborder="0" style="border:0" allowfullscreen></iframe>
+        
                                 </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="namekatakana" placeholder="お名前（カタカナ）＊">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="email" placeholder="E-mail＊">
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" id="tel" placeholder="電話番号＊">
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control" id="fax" placeholder="FAX番号">
-                                </div>
-                                <button type="submit" class="btn btn-primary">送信</button>
-                            </form>
-
-                        </div>
-
+        
+                            </div>
                     </div>
-
-                    <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12" style="padding-right: 0px; padding-left: 0px;">
-                        <div class="map-container">
-
-                            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d722.8132867177167!2d141.90654682920848!3d43.5596079705375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0c98d88d92de73%3A0x6893b993c8972458!2zSmFwYW4sIOOAkjA3My0wMDIxIEhva2thaWTFjSwgVGFraWthd2Etc2hpLCBIb25tYWNoaSwgMiBDaG9tZeKIkjPiiJI1LCDvvLTvvLPjg5Pjg6s!5e0!3m2!1sen!2sus!4v1512529915990"
-                                frameborder="0" style="border:0" allowfullscreen></iframe>
-
-                        </div>
-
-                    </div>
-
+                    
                 </div>
-                <span class="col-lg-2 hidden-xs col-md-2 col-sm-2"></span>
             </div>
         </div>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnleYwXg3nbEGFus9O_9-4LnIjIhMuS4U">
@@ -302,31 +302,11 @@
             });
         </script>
 
-        <!-- <script>
-        $(document).ready(readyDocument);
-            
-            
-            function readyDocument(){
-              $(".dropdowService").click(function(){
-               $(this).parent().css({backgroundColor:"white",color:"black"}); 
-               $(this).animate({opacity:0,left:"80%"},5000,function(){
-                   console.log("termine");
-               });
-                console.log( $(this).parent().attr("class"));
-            });
-            $(".dropdowService").mouseover(function(){ //for modifing menu dropdown css, on mouse events
-               $(this).css({backgroundColor:"white",color:"black"}); 
-            });
-            $(".dropdowService").mouseout(function(){
-               $(this).css({backgroundColor:"black",color:"white"}); 
-            });
-            }
-        </script> -->
-
         <div ng-include src="'partials/mp_footer.html'"></div>
 
         <script type="text/javascript" src="../scripts/jquery.cycle2.min.js"></script>
         <script src="../plugins/facebooklikeslider/js/jquery.bxslider.js"></script>
+        <script type="text/javascript" src="../scripts/footer_collapse.js"></script>
 </body>
 
 </html>
