--- a/public/partials/mp_footer.html
+++ b/public/partials/mp_footer.html
@@ -1,52 +1,68 @@
 <footer>
     <div ng-controller="mpFooterController" class="container">
         <div class="row">
-            <span class="col-lg-1 col-md-1 hidden-sm hidden-xs "></span>
-
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 widget">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-10 
+            col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1 widget">
                 <img src="../R/footer/group_logo_footer.png">
             </div>
 
-            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 widget">
+            <div class="list col-lg-3 col-md-3 col-sm-3 col-xs-10 
+            col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-1 widget">
                 <h2>お問い合わせ</h2>
                 <article class="widget_content">
                     <ul>
-                        <li><img  src="../R/ic_phone_gray.png"><a>0125-23-3725</a></li>
-                        <li><img src="../R/ic_phone_gray.png"><a>FAX 0125-23-2250</a></li>
-                        <li><img ng-click="openNewTabLoc()" src="../R/ic_location_gray.png"><a ng-click="openNewTabLoc()">北海道滝川市本町2丁目3番5号TSビル1階</a></li>
+                        <li>
+                            <img src="../R/ic_phone_gray.png">
+                            <a class="num">0125-23-3725</a>
+                        </li>
+                        <li>
+                            <img src="../R/ic_phone_gray.png">
+                            <a class="num">FAX 0125-23-2250</a>
+                        </li>
+                        <li>
+                            <img ng-click="openNewTabLoc()" src="../R/ic_location_gray.png">
+                            <a ng-click="openNewTabLoc()">北海道滝川市本町2丁目3番5号TSビル1階</a>
+                        </li>
                     </ul>
                 </article>
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 widget">
-                    <h2 class="orange">サイトマップ</h2>
-                <ul>
-                        
-                    <li><a href="#">トップページ</a></li>
-                    <li><a href="business.html">事業内容</a></li>
-                    <li><a href="company.html">会社概要</a></li>
-                    <li><a href="contact.html">お問い合わせ</a></li>
-                    <li><a href="">NEWS</a></li>
-                
-                </ul>
-            </div>
+            <div class="list col-lg-3 col-md-3 col-sm-3 col-xs-10 
+            col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-1 widget">
+                <h2>サイトマップ</h2>
+                <article class="widget_content">
+                    <ul>
 
-            <span class="col-lg-1 col-md-1 hidden-sm hidden-xs"></span>
+                        <li>
+                            <a href="#">トップページ</a>
+                        </li>
+                        <li>
+                            <a href="business.html">事業内容</a>
+                        </li>
+                        <li>
+                            <a href="company.html">会社概要</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">お問い合わせ</a>
+                        </li>
+                        <li>
+                            <a class="num" href="">NEWS</a>
+                        </li>
+
+                    </ul>
+                </article>
+            </div>
         </div>
 
         <div class="row">
-            <span class="col-lg-1 col-md-1 hidden-sm hidden-xs "></span>
-
-            <div class="divider col-lg-10 col-md-10 col-sm-12 col-xs-12">
-                
+            <div class="divider col-lg-10 col-md-10 col-sm-10 col-xs-10
+            col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
             </div>
-            <span class="col-lg-1 col-md-1 hidden-sm hidden-xs"></span>
         </div>
     </div>
     <div class="footer-bottom">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12 widget" style="text-align: center; color: #545454; font-size: 13px;">COPYRIGHT © 2017 ALL RIGHTS RESERVED CREATED BY<span class="pull-right"> OWLINVENTION & BLITZAR CORP.</span>
-                </div>
+            <div class="disclaimer">COPYRIGHT © 2017 ALL RIGHTS RESERVED CREATED BY
+                <span class="pull-right"> OWLINVENTION & BLITZAR CORP.</span>
             </div>
         </div>
     </div>
