--- a/public/partials/mp_header.html
+++ b/public/partials/mp_header.html
@@ -1,14 +1,13 @@
 <div class="social">
-    <span class="col-lg-1 col-md-1 col-sm-2 hidden-xs"></span>
-    <div class="col-lg-10 col-md-10 col-sm-8 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0" style="padding: 0px; ">
+    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1" style="padding: 0px; ">
 
-        <div class=" col-lg-6 col-md-6 col-sm-6 col-xs-12 " style="padding-right: 0px; padding-left: 0px;">
+        <div class=" col-lg-8 col-md-8 col-sm-6 col-xs-12 " style="padding-right: 0px; padding-left: 0px;">
 
             <p class="secondaryText">有限会社谷口板金工業所は屋根・外壁工事を専門とする会社です。</p>
 
         </div>
 
-        <div class="social-container col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding-right: 0px; padding-left: 0px;">
+        <div class="social-container col-lg-4 col-md-4 col-sm-6 col-xs-12" style="padding-right: 0px; padding-left: 0px;">
 
             <div class="social-icons">
                 <img src="../R/face_gray.png" alt="F">
@@ -18,7 +17,6 @@
         </div>
 
     </div>
-    <span class="col-lg-1 col-md-1 col-sm-2 hidden-xs"></span>
 </div>
 
 <div ng-controller="mpHeaderController" class="row logo-header">
@@ -37,26 +35,27 @@
 
         <div class="right-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
-            <div class="info-container">
-                <img ng-click="openNewTabLoc()" src="../R/topsection/ic_location.png" alt="Location">
-                <div class="divider"></div>
-                <div class="right-text">
-                    <h5 ng-click="openNewTabLoc()">北海道滝川市本町2丁目3番5号</h5>
-                    <p>ＴＳビル1階</p>
-
+            <div class="row rc-row">
+                <div id="call-id" class="info-container col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <img src="../R/topsection/call.png" alt="Phone:">
+                    <div class="divider"></div>
+                    <div class="right-text">
+                        <h5>0125-23-3725</h5>
+                        <p>FAX 0125-23-2250</p>
+                    </div>
                 </div>
 
-            </div>
+                <div class="info-container col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <img ng-click="openNewTabLoc()" src="../R/topsection/ic_location.png" alt="Location">
+                    <div class="divider"></div>
+                    <div class="right-text">
+                        <h5 ng-click="openNewTabLoc()">北海道滝川市本町2丁目3番5号</h5>
+                        <p>ＴＳビル1階</p>
 
-            <div id="call-id" class="info-container">
-                <img src="../R/topsection/call.png" alt="Phone:">
-                <div class="divider"></div>
-                <div class="right-text">
-                    <h5>0125-23-3725</h5>
-                    <p>FAX 0125-23-2250</p>
+                    </div>
+
                 </div>
             </div>
-
 
         </div>
     </div>
@@ -65,7 +64,7 @@
 </div>
 
 <div class="row mp-menu">
-    <div class="menu col-lg-10 col-lg-offset-1 col-xs-12 col-xs-offset-0">
+    <div class="menu col-lg-10 col-md-10 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
 
         <nav id="main-menu" class="navbar navbar-default">
             <div class="container-fluid">
@@ -90,13 +89,10 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#!/business">会社概要</a>
+                            <a href="#!/business">ニュース</a>
                         </li>
                         <li>
-                            <a href="#!/company">ニュース</a>
-                        </li>
-                        <li>
-                            <a href="#!/contact">お問い合わせ</a>
+                            <a href="#!/company">会社概要</a>
                         </li>
                     </ul>
                 </div>
