--- a/public/partials/gs_header.html
+++ b/public/partials/gs_header.html
@@ -1,25 +1,26 @@
-<div class="row">
-    <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-    <div class="top-info col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
-        <span class="top-description col-lg-6 col-md-6 col-sm-6 col-xs-12">有限会社谷口総合サービスは、不動産を専門とする会社です。</span>
-        <div class="right-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
-
-            <div class="info-container">
-                <img src="../R/topsection/ic_location.png" alt="call" />
-                <div class="divider"></div>
-                <p class="right-text">北海道滝川市本町2丁目3番5号
-                    <br>073-0021 TSビル 1F</p>
-            </div>
-
-            <div class="info-container">
-                <img src="../R/topsection/call.png" alt="call" />
-                <div class="divider"></div>
-                <p class="right-text">0125-23-8170</p>
-            </div>
-
-        </div>
+<div class="row top-info">
+    <div class="top-description col-lg-5 col-md-5 col-sm-5 col-xs-10
+    col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
+        有限会社谷口総合サービスは、不動産を専門とする会社です。
     </div>
-    <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
+    <div class="right-container col-lg-5 col-md-5 col-sm-5 col-xs-10
+    col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+    <div class="row rc-row">
+            <div class="info-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <img src="../R/topsection/ic_location.png" alt="location" />
+                    <div class="divider"></div>
+                    <p class="right-text">北海道滝川市本町2丁目3番5号
+                        <br>073-0021 TSビル 1F</p>
+                </div>
+        
+                <div class="info-container col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <img src="../R/topsection/call.png" alt="call" />
+                    <div class="divider"></div>
+                    <p class="right-text">0125-23-8170</p>
+                </div>
+    </div>
+       
+    </div>
 </div>
 
 <div class="row menu-row">
@@ -37,7 +38,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="#">
-                        <img src="../R/logos/logo-blue.png">
+                        <img src="../R/logos/taniguchi_mini.png">
                     </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
