--- a/public/CSS/generalServiceStyles/gs_owners_styles.css
+++ b/public/CSS/generalServiceStyles/gs_owners_styles.css
@@ -14,6 +14,7 @@
     color: white;
     margin: 0 auto;
     font-size: 3.3em;
+    font-family: mplusregular;
 }
 
 body .owners-main-body .row{
@@ -27,17 +28,12 @@ body .owners-main-body .row .owners-info{
 }
 
 body .owners-main-body .row .owners-info .wrapper-row{
-    display: flex;
-    align-items: center;
     padding: 8px 0px;
 }
 
 body .owners-main-body .row .owners-info .wrapper-row .icon{
-    display: flex;
-    align-items: center;
     background-image: url('../../R/bullet-point.png');
     background-repeat: no-repeat;
-    width: 35px;
     height: 45px;
 }
 
@@ -45,15 +41,12 @@ body .owners-main-body .row .owners-info .wrapper-row .icon{
 body .owners-main-body .row .owners-info .wrapper-row .icon .enum{
     color: white;
     font-weight: bold;
-    font-size: 14px;
-    margin: 0 auto;
-    transform: translateY(-27%);
 }
 
 body .owners-main-body .row .owners-info .wrapper-row .info-text{
-    margin-left: 12px;
     color: #555555;
-    font-size: 1.1em;
+    font-size: 1.6em;
+    font-family: mplusmedium;
 }
 
 body .owners-main-body .row .owners-info .owners-voice{
@@ -70,6 +63,7 @@ body .owners-main-body .row .owners-info .owners-voice .title h4{
     color: #0051A3;
     margin: 0 auto;
     font-size: 3.2em;
+    font-family: mplusheavy;
 }
 
 body .owners-main-body .row .owners-info .owners-voice .title h4 span{
@@ -79,7 +73,6 @@ body .owners-main-body .row .owners-info .owners-voice .title h4 span{
 
 body .owners-main-body .row .owners-info .owners-voice .review-wrapper.row{
     padding: 10px 0px;
-    margin: 5px 0px;
 }
 
 body .owners-main-body .row .owners-info .owners-voice .review-wrapper.row .img-container{
@@ -123,18 +116,28 @@ body .owners-main-body .row .owners-info .owners-voice .review-wrapper.row .revi
     font-size: 1.8em;
     color: #292929;
     font-weight: bold;
-
+    font-family: mplusmedium;
 }
 
 body .owners-main-body .row .owners-info .owners-voice .review-wrapper.row .review .review-text{
     color: #444444;
-}
-
-body .owners-main-body .row .owners-info .owners-voice .review-wrapper.row .ng-scope{
-    display: flex;
-    align-items: center;
+    font-family: mpluslight;
+    font-size: 1.8rem;
+    padding: 10px 0px;
 }
 
 body .owners-main-body .row .owners-info .owners-voice .review-wrapper.row.oddie .img-container.reviewer-img{
     right: 291px;
+}
+
+.chart{
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+@media all and (max-width: 770px){
+    .gs-title-container .title{
+        font-size: 2.3em;
+    }
+
 }
