--- a/public/CSS/generalServiceStyles/home_gs_styles.css
+++ b/public/CSS/generalServiceStyles/home_gs_styles.css
@@ -1,6 +1,6 @@
 body #gs-home-slider .bx-wrapper{
     border: 0px;
-    height: 480px;
+    max-height: 510px;
     overflow: hidden;
 }
 
@@ -107,20 +107,16 @@ body .home-main-body .gs-mission{
     padding: 25px 0px;
 }
 
-body .home-main-body .gs-mission .wrapper{
-    display: inline-flex;
-}
-
-body .home-main-body .gs-mission .wrapper .left{
+body .home-main-body .gs-mission .left{
     padding: 0px;
 }
 
-body .home-main-body .gs-mission .wrapper .left h2{
+body .home-main-body .gs-mission  .left h2{
     color: #282828;
     font-weight: 900;
 }
 
-body .home-main-body .gs-mission .wrapper .left h2 #custom-border{
+body .home-main-body .gs-mission  .left h2 #custom-border{
     border-bottom: 2px solid #0052A5;
     position: absolute;
     left: 0;
@@ -128,36 +124,66 @@ body .home-main-body .gs-mission .wrapper .left h2 #custom-border{
     margin-top: 4px;
 }
 
-body .home-main-body .gs-mission .wrapper .left p{
+body .home-main-body .gs-mission  .left p{
     color: #555555;
     margin-bottom: 22px;
     padding-right: 20px;
 }
 
-body .home-main-body .gs-mission .wrapper .left p.darker{
+body .home-main-body .gs-mission  .left p.darker{
     margin-top: 22px;
     font-weight: 700;
 }
 
 
-body .home-main-body .gs-mission .wrapper .right{
+body .home-main-body .gs-mission  .right{
     padding: 0px;
 }   
 
-body .home-main-body .gs-mission .wrapper .right .column-1{
+body .home-main-body .gs-mission  .right .column-1{
     overflow-x: hidden;
     padding: 0;
     padding-left: 20px;
 }  
 
-body .home-main-body .gs-mission .wrapper .right .column-2{
+body .home-main-body .gs-mission  .right .column-2{
     overflow-x: hidden;
     margin-top: 13rem;
     padding: 0;
 }   
 
-body .home-main-body .gs-mission .wrapper .right .h-img{
+body .home-main-body .gs-mission  .right .h-img{
     max-width: 305px;
     margin-top: 2rem;
     max-height: 230px;
 }   
+
+@media screen and (max-width: 770px) {
+    body .home-main-body .for-customers .wrapper #to-sell .inner,
+    body .home-main-body .for-customers .wrapper #to-buy .inner{
+        transform: none;
+    }
+
+    body .home-main-body .for-customers .wrapper #to-sell .inner .text,
+    body .home-main-body .for-customers .wrapper #to-buy .inner .text{
+        transform: none;
+        padding: 8px;
+    }
+
+    body .home-main-body .for-customers .wrapper #to-sell .inner .btn-container p,
+    body .home-main-body .for-customers .wrapper #to-buy .inner .btn-container p{
+        transform: none;
+    }
+
+    body .home-main-body .for-customers .wrapper #to-sell .inner .text h3,
+    body .home-main-body .for-customers .wrapper #to-buy .inner .text h3{
+        font-size: 32px;
+        font-family: mpluslight;
+    }
+    
+    body .home-main-body .for-customers .wrapper #to-sell .inner .text p,
+    body .home-main-body .for-customers .wrapper #to-buy .inner .text p{
+        font-size: 18px;
+        font-family: mplusregular;
+    }
+}
