--- a/public/partials/gs_home.html
+++ b/public/partials/gs_home.html
@@ -75,9 +75,8 @@
 
         </div>
         <div class="row gs-mission">
-            <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-            <div class="wrapper col-lg-10 col-md-10 col-sm-10 col-xs-12">
-                <div class="left col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="left col-lg-5 col-md-5 col-sm-5 col-xs-10
+                        col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
                     <h2>
                         谷口総合サービスとは・・・
                         <div id="custom-border"></div>
@@ -99,7 +98,8 @@
 
                     </p>
                 </div>
-                <div class="right col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="right col-lg-5 col-md-5 col-sm-5 col-xs-10
+                col-xs-offset-1 col-sm-offset-1 col-md-offset-0 col-lg-offset-0">
                     <div class="row">
                             <div class="column-1 col-lg-6 col-md-6 col-sm-6 col-xs-6" >
                                     <img class="h-img" src="../R/gs_home/Apartment1.png" alt="">
@@ -112,8 +112,6 @@
                     </div>
                  
                 </div>
-            </div>
-            <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
         </div>
     </div>
 
