--- a/public/partials/gs_owners.html
+++ b/public/partials/gs_owners.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_header_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_menu_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_footer_styles.css" />
+    <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
 
 </head>
 <header>
@@ -23,21 +24,23 @@
         <div class="title">
             賃貸アパート・賃家のオーナー様
         </div>
-
     </div>
-
     <div class="owners-main-body" ng-controller="OwnersPgCtrl">
         <div class="row">
-            <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
-            <div class="owners-info col-lg-10 col-md-10 col-sm-10 col-xs-12">
+            <div class="owners-info col-lg-10 col-md-10 col-sm-10 col-xs-10
+            col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1">
                 <!-- recommendations -->
-                <div class="wrapper-row" ng-repeat="info in ownersInfo">
-                    <div class="icon">
-                        <span class="enum">{{info.id}}</span>
+                <div class="row wrapper-row" ng-repeat="info in ownersInfo">
+                    <div class="icon col-lg-1 col-md-1 col-sm-1 col-xs-1">
+                        <span class="enum">.</span>
                     </div>
-                    <div class="info-text">
+                    <div class="info-text col-lg-11 col-md-11 col-sm-11 col-xs-11">
                         <p>{{info.msg}}</p>
                     </div>
+                </div>
+
+                <div class="chart">
+                    <img src="../R/manage.gif">
                 </div>
 
                 <!-- reviews -->
@@ -93,20 +96,11 @@
                 </div>
 
             </div>
-
-
-
-            <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"></span>
         </div>
-
-
     </div>
-
-
     <footer>
         <div ng-include="'partials/gs_footer.html'"></div>
     </footer>
-
     <script>
         $(document).ready(function () {
             var hash = window.location.hash;
